syntax = "proto3";
package payment;
option go_package = "grpc/pb";

import "google/protobuf/empty.proto";

service PaymentService {
    rpc Payment(PaymentRequest) returns (google.protobuf.Empty) {}
}

message PaymentRequest {
    CreditCard CreditCard = 1;
    double amount = 2;
    string store = 3;
    string description = 4;
}

message CreditCard {
    string name = 1;
    string number = 2;
    int32 expirationMonth = 3;
    int32 expirationYear = 4;
    int32 cvv = 5;
}